--- a/我的老天啊士貴.ipynb
+++ b/我的老天啊士貴.ipynb
@@ -20,9 +20,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rm(list=ls())\n",
+    "for v in dir(): del globals()[v]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.getcwd()\n",
+    "os.chdir('C:\\\\Users\\\\chiaming\\\\Desktop\\\\python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\chiaming\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\chiaming\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\chiaming\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\chiaming\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:529: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\chiaming\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:530: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\chiaming\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:535: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -46,8 +85,129 @@
     "\n",
     "from ckiptagger import WS, POS, NER\n",
     "ws = WS(\"./data\")\n",
+    "pos = POS(\"./data\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_small = pd.read_csv('C:\\\\Users\\\\chiaming\\\\Desktop\\\\python\\\\士貴\\\\專案資料.csv',engine='python',encoding='utf-8',header=None,names=['日期','標題','內容'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_small"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:#ffffff\"> <b>>預先設置函數 </b></p>\n",
+    "<ul>\n",
+    "  <li style=\"color:#ffffff\">辭典權重</li>\n",
     "\n",
-    "all_small = pd.read_csv('./士貴/專案資料.csv',engine='python',encoding='utf-8',header=None,names=['日期','標題','內容'])"
+    "  <li style=\"color:#ffffff\">停止詞、停止詞詞性</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def construct_dictionary(word_to_weight):\n",
+    "    length_word_weight = {}\n",
+    "    \n",
+    "    for word, weight in word_to_weight.items():\n",
+    "\n",
+    "        if not word: continue\n",
+    "        try:\n",
+    "            weight = float(weight)\n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "        length = len(word)\n",
+    "        if length not in length_word_weight:\n",
+    "            length_word_weight[length] = {}\n",
+    "        length_word_weight[length][word] = weight\n",
+    "        \n",
+    "    length_word_weight = sorted(length_word_weight.items())\n",
+    "    \n",
+    "    return length_word_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, {'台G': 1.0, '開噴': 2.0, '崩盤': 1.0, '空單': 1.0, '中美': 1.0, '支持': 1.0, '華為': 1.0, '川普': 1.0, '下探': 1.0, '上探': 1.0, '不要': 1.0}), (3, {'台GG': 2.0})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_to_weight = {\n",
+    "    \"台G\": 1,\n",
+    "    \"台GG\": 2,\n",
+    "    \"開噴\": 2,\n",
+    "    \"崩盤\": 1,\n",
+    "    \"空單\": 1,\n",
+    "    \"中美\": 1,\n",
+    "    \"支持\": 1,\n",
+    "    \"華為\": 1,\n",
+    "    \"川普\": 1,\n",
+    "    \"下探\": 1,\n",
+    "    \"上探\": 1,\n",
+    "    \"不要\": 1,\n",
+    "}\n",
+    "dictionary = construct_dictionary(word_to_weight)\n",
+    "print(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deliminate = ['COMMACATEGORY','COLONCATEGORY','DASHCATEGORY','ETCCATEGORY','EXCLAMATIONCATEGORY'\n",
+    "              ,'PARENTHESISCATEGORY','PAUSECATEGORY','PERIODCATEGORY','QUESTIONCATEGORY','SEMICOLONCATEGOR'\n",
+    "              ,'SPCHANGECATEGORY','WHITESPACE','DE','SHI','V_2','Caa','T','Neu','P','Caa','Cab','Cba','Cbb','Nes','Nep','Neqa','Neqb'\n",
+    "             ,'Da','Dfa','Dfb']\n",
+    "stopword = ['吧','就','都','也','者','/','跟','╱','又','了','才','得','台積','面板'\n",
+    "            ,'半導體','台G','GG','台GG','蘋概股','晶圓','奈米','製程','貿易戰','中美'\n",
+    "           ,'大盤','2330','台gg','gg','台績','IC產業','IC設計','科技股','那斯達克','納斯達克'\n",
+    "            ,'道瓊','台積電','台績電','GG ADR','GG adr','gg ADR','gg adr']"
    ]
   },
   {
@@ -66,12 +226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_small = all_small.dropna()\n",
-    "GG = all_small[(all_small['內容'].str.contains('台積|面板|半導體|台G|GG|蘋概股|晶圓|奈米|製程|貿易戰|中美|大盤|美股|2330|川普')==True) & (all_small['標題'].str.contains('[公告]')==False)]"
+    "GG = all_small[(all_small['內容'].str.contains('台積|面板|半導體|台G|GG|蘋概股|晶圓|奈米|製程|貿易戰|中美|大盤|2330|台gg|台g|gg|台績|IC產業|IC設計|科技股|納斯達克|那斯達克|道瓊')==True) & (all_small['標題'].str.contains('[公告]')==False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_small[(all_small['內容'].str.contains('川普&跪')==True) & (all_small['標題'].str.contains('[公告]')==False)]"
    ]
   },
   {
@@ -83,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +261,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "Date.sort()       #讓資料照時間排\n",
     "Date = Date[1:]   #確保資料為5/29-11/6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7 and 6"
    ]
   },
   {
@@ -118,7 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#double list\n",
+    "com = [[a+'('+b+')' for a,b in zip(i,j)] for i,j in zip(ws_results, pos_results)]\n",
+    "com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -126,58 +326,98 @@
      "output_type": "stream",
      "text": [
       "【2019-05-29】\n",
-      ">> 共有 7文章 / 259詞 / 403詞數\n",
+      ">> 共有 6文章 / 181詞 / 235詞數\n",
       ">> 次數Dataframe完成\n",
       ">> tf矩陣完成\n",
       ">> idf矩陣完成\n",
       ">> tf-idf矩陣完成\n",
-      ">>>>>> 結束並存檔 (共1.69秒)\n",
+      ">>>>>> 結束並存檔 (共5.03秒)\n",
       "【2019-05-30】\n",
-      ">> 共有 278文章 / 3907詞 / 16365詞數\n",
+      ">> 共有 246文章 / 3834詞 / 10942詞數\n",
       ">> 次數Dataframe完成\n",
       ">> tf矩陣完成\n",
       ">> idf矩陣完成\n",
       ">> tf-idf矩陣完成\n",
-      ">>>>>> 結束並存檔 (共84.15秒)\n"
+      ">>>>>> 結束並存檔 (共125.87秒)\n",
+      "【2019-05-31】\n",
+      ">> 共有 217文章 / 3267詞 / 9997詞數\n",
+      ">> 次數Dataframe完成\n",
+      ">> tf矩陣完成\n",
+      ">> idf矩陣完成\n",
+      ">> tf-idf矩陣完成\n",
+      ">>>>>> 結束並存檔 (共219.09秒)\n"
      ]
     }
    ],
    "source": [
     "from ckiptagger import WS, POS, NER\n",
     "import time\n",
+    "import copy\n",
     "\n",
-    "ws = WS(\"./data\")\n",
     "\n",
-    "for date in Date[0:2]:\n",
+    "for date in Date[0:3]:\n",
     "    tStart = time.time()#計時開始\n",
     "    print('【'+date+'】')\n",
     "    \n",
     "    #第一部分： 【斷詞+計算當天詞集+計算當天出現詞數】\n",
     "    ### 詞數 v.s 詞集:  詞數可以重複，詞集不行  (例如 1th、3th文章都有 \"台積\" ， 那詞數會是 2個 、詞集會是 1個\n",
-    "    ws_results = ws(GG[GG['日期']==date]['內容'],sentence_segmentation=False)\n",
-    "    word_list = [] #出現詞數\n",
-    "    word_set = []  #當天詞集\n",
-    "    for article_nth in ws_results:\n",
-    "        for word in article_nth :    \n",
-    "            word_list.append(word)\n",
+    "    ws_results = ws(GG[GG['日期']==date]['內容'],sentence_segmentation=False,recommend_dictionary = dictionary)\n",
+    "    pos_results = pos(ws_results)\n",
+    "  #  result_com = [[a+'('+b+') 'for a,b in zip(k,v)]for k,v in zip(ws_results,pos_results)]\n",
+    "    word_list = [] #出現詞數 (總和)\n",
+    "    word_set = []  #當天詞集 (單一)\n",
+    "    word_adj_only = []  #當天詞性 (單一)\n",
+    "    word_adj_all = []   #當天詞性 (總和)\n",
+    "    word_com_only = [] #單一總和\n",
+    "    word_com_all = []  #全部次數\n",
+    "    word_com_like = []  #合併ws,pos\n",
+    "    today_num = len(ws_results) #當天文章數輛 (長度)\n",
+    "    \n",
+    "    for counter in range(today_num):\n",
+    "        zip_all = zip(ws_results[counter],pos_results[counter])\n",
+    "        word_temporary = []\n",
+    "        for word,adj in zip_all:\n",
+    "            if (adj not in deliminate and word not in stopword):\n",
+    "                word_list.append(word.strip())\n",
+    "                word_adj_all.append(adj.strip())\n",
+    "                word_temporary.append(word.strip()+'('+adj.strip()+')')\n",
+    "            else:\n",
+    "                continue\n",
+    "        word_com_like.append(word_temporary)\n",
+    "        \n",
+    "    for index in word_com_like:\n",
+    "        for final_count in index:\n",
+    "            word_com_all.append(final_count)\n",
+    "  #  for article_nth in ws_results:\n",
+    "  #      for word in article_nth :    \n",
+    "  #          word_list.append(word)\n",
     "    word_set = list(set(word_list))\n",
-    "    print('>> 共有 ' + str(len(ws_results)) + '文章'+ ' / ' + str(len(word_set)) + '詞' + ' / ' + str(len(word_list)) + '詞數')\n",
+    "    word_adj_only = list(set(word_adj_all))\n",
+    "    word_com_only = list(set(word_com_all))\n",
+    "    print('>> 共有 ' + str(today_num) + '文章'+ ' / ' + str(len(word_com_only)) + '詞' + ' / ' + str(len(word_com_all)) + '詞數')\n",
     "\n",
-    "    #第二部ˋ分： 【創建空的Dataframe，欄位是當天有幾篇文章，列是當天的詞集數量】\n",
-    "    zero_data = np.zeros(shape=(len(word_set),len(ws_results)))\n",
-    "    globals()['columns'] = []\n",
-    "    for col in range(len(ws_results)):\n",
+    "    #第二部分： 【創建空的Dataframe，欄位是當天有幾篇文章，列是當天的詞集數量】\n",
+    "    zero_data = np.zeros(shape=(len(word_com_only),today_num))\n",
+    "    globals()['columns'] = []               \n",
+    "    for col in range(today_num):\n",
     "        columns.append(str(col+1)+'th')\n",
-    "    total = pd.DataFrame(zero_data,index=word_set,columns=columns)\n",
+    "    total = pd.DataFrame(zero_data,index=word_com_only,columns=columns)\n",
     "    check_word = list(total.index)\n",
     "    \n",
     "    ##算次數\n",
-    "    for total_col in range(len(total.columns)):\n",
-    "        for text_pos in ws_results[total_col]:\n",
-    "            total.iloc[check_word.index(text_pos),total_col] +=1\n",
+    "    ###########################################################################################\n",
+    "    ###########################################################################################\n",
+    "    for total_col in range(today_num):\n",
+    "        for text_pos in word_com_like[total_col]:\n",
+    "            if text_pos  in check_word:\n",
+    "                total.iloc[check_word.index(text_pos),total_col] +=1\n",
+    "            else:\n",
+    "                continue\n",
     "    print('>> 次數Dataframe完成')\n",
+    "    ###########################################################################################\n",
+    "    ###########################################################################################\n",
     "    \n",
-    "    #深複製tf - idf\n",
+    "    #深複製tf - idf (避免一般複製的標籤行為)\n",
     "    tf = copy.deepcopy(total)\n",
     "    idf = copy.deepcopy(total)\n",
     "    \n",
@@ -196,11 +436,11 @@
     "    print('>> idf矩陣完成')\n",
     "    \n",
     "    #tf idf互乘\n",
-    "    tfidf = pd.DataFrame(np.array(tf)*np.array(idf),columns=columns,index=word_set)\n",
+    "    tfidf = pd.DataFrame(np.array(tf)*np.array(idf),columns=columns,index=word_com_only)\n",
     "    print('>> tf-idf矩陣完成')\n",
     "    \n",
     "    #給出每天的 詞-tfidf分數 資料表\n",
-    "    tfidf_text = pd.DataFrame(tfidf.sum(axis=1),columns=['分數']) #列總和\n",
+    "    tfidf_text = pd.DataFrame(tfidf.mean(axis=1),columns=['分數']) #列平均\n",
     "    word = copy.deepcopy(tfidf_text.sort_values('分數',ascending=False).index)\n",
     "    score = copy.deepcopy(tfidf_text.sort_values('分數',ascending=False)['分數'])\n",
     "    pd.DataFrame({'詞':word,'分數':score}).to_csv(date+'.csv',encoding='utf_8_sig',index=False)\n",
